<resources>
    <string name="app_name">TDF</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timetitle">Please select the time</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="complete">Complete</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="wait">Waiting</string>
    <string name="prepare">Preparing</string>
    <string name="active">Active</string>
    <string name="deactive">Deactive</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="hot_drinks">Hot Drinks</string>
    <string name="cold_drinks">Cold Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="drinks">Drinks</string>
    <string name="favorites">Favorites</string>
    <string name="checkout">CheckOut</string>
    <string name="orderid">OrderID:</string>
    <string name="cancelled">Cancel</string>
    <string name="order_details">Order Details</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="Low">Low</string>
    <string name="High">High</string>
    <string name="Medium">Medium</string>
    <string name="preparingStatus">Your orders are preparing</string>
    <string name="daliveryStatus">No active orders</string>
    <string name="delivered_norders">Delivered\nOrders</string>
    <string name="pending_norders">Pending\nOrders</string>
    <string name="cancelled_norders">Cancelled\nOrders</string>
    <string name="tasks">Tasks</string>
    <string name="points">Points</string>
    <string name="status">Status</string>
    <string name="details">Details</string>
    <string name="rate_order">Rate Order</string>
    <string name="confirm">Confirm</string>
    <string name="yesterday">yesterday</string>
    <string name="today">today</string>
    <string name="menu">Menu</string>
    <string name="order">Orders</string>
    <string name="cart">Cart</string>
    <string name="favorit">Favorites</string>
    <string name="leave">Leave Requests</string>
    <string name="survey">Survey System</string>
    <string name="ticket">Ticket</string>
    <string name="event">Events</string>
    <string name="addTicket">Add Ticket</string>
    <string name="ticketDetails">Ticket Details</string>
    <string name="notification">Notification</string>
    <string name="exit_time">Exit Time</string>
    <string name="past_events">Past Events</string>
    <string name="current_events">Current Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="no_events">No Events</string>
    <string name="no_events_are_currently_active">No events are currently active</string>
    <string name="apply">Apply</string>
    <string name="attended">Attended</string>
    <string name="publicEvent">Public Event</string>
    <string name="entrance_time">Entrance Time</string>
    <string name="open_tickets">Open tickets</string>
    <string name="closed_tickets">Closed tickets</string>
    <string name="create_new_support_ticket">Create new support ticket</string>
    <string name="title">Title:</string>
    <string name="roomTitle">Title</string>
    <string name="ticket_id">Ticket ID:</string>
    <string name="category">Category:</string>
    <string name="calendar">Calendar</string>
    <string name="leave_request">Leave Request</string>
    <string name="ticket_system">Ticket System</string>
    <string name="event_system">Event System</string>
    <string name="survey_system">Survey System</string>
    <string name="refreshments">Refreshments</string>
    <string name="reservation">Reserve Room</string>
    <string name="reservationDetails">Meeting Details</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="on_going">On going</string>
    <string name="completed">Completed</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="leave_request_details">Leave Request Details</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="evaluated_surveys">Evaluated Surveys</string>
    <string name="available_surveys">Available Surveys</string>
    <string name="rating">Rating</string>
    <string name="multiple">Multiple</string>
    <string name="open">Open</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="type_text">Type text…</string>
    <string name="satisfaction_survey">Satisfaction Survey</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="do_you_want_submit_the_norder">Do you want submit the\norder</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_n_this_cart_item">Are you sure you want to delete\n this cart item ?</string>
    <string name="send_request">Send Request</string>
    <string name="are_you_sure_you_want_to_send_n_this_request">Are you sure you want to send\n this request ?</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="are_you_sure_to_submit_survey">Are you sure to submit survey?</string>
    <string name="type_of_permission">Type of Permission</string>
    <string name="description">Description</string>
    <string name="request">Request</string>
    <string name="back">Back</string>
    <string name="deactivation">Deactivation</string>
    <string name="new_notification">New Notification</string>
    <string name="priority">Priority:</string>
    <string name="evaluate">Evaluate</string>
    <string name="titleRequired">Title is required</string>
    <string name="categoryRequired">Category is required</string>
    <string name="descriptionRequired">Description is required</string>
    <string name="your_request_to_attend_in_the_event_has_been_sent">Your request to attend in the event\nhas been sent</string>
    <string name="great">Great</string>
    <string name="congratulation">Congratulation</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="healthData">Activity</string>
    <string name="dailySteps">Daily Steps</string>
    <string name="kcal">Kcal</string>
    <string name="steps">STEPS</string>
    <string name="align_the_qr_code_within_the_frame_n_to_scan">Align the QR code within the frame \n to scan</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="other">Other</string>
    <string name="select_location">Select Location</string>
    <string name="my_office">My Office</string>
    <string name="type_address">Type address...</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="are_you_sure_you_want_to_mark_all_notifications_as_read">Are you sure you want to mark all notifications as read?</string>
    <string name="are_you_sure_you_want_to_delete_n_all_notification">Are you sure you want to delete\n all notifications?</string>
    <string name="delete_all">Delete all</string>
    <string name="are_you_sure_you_want_to_delete_n_this_notification">Are you sure you want to delete\n this notification?</string>
    <string name="when_you_get_notifications_n_they_ll_show_up_here">When you get notifications,\n they’ll show up here</string>
    <string name="refresh">Refresh</string>
    <string name="floor">Floor</string>
    <string name="news">News</string>
    <string name="tdf_oms">TDF OMS</string>
    <string name="my_steps">MY STEPS</string>
    <string name="top_5_users">TOP 5 USERS</string>
    <string name="not_defined">Not defined</string>
    <string name="room">Room</string>
    <string name="select_room">Select Room</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="invite_people">Invited People</string>
    <string name="you_did_t_add_any_people_to_this_meeting_yet">You did’t add any People to This Meeting yet</string>
    <string name="add_someone">Add Someone</string>
    <string name="book_now">Book Now</string>
    <string name="enter_your_meeting_title">Enter your meeting title ...</string>
    <string name="enter_your_meeting_description">Enter your meeting description ...</string>
    <string name="search_people">Search People</string>
    <string name="add_guest">Add Guest</string>
    <string name="add_people">Add People</string>
    <string name="change_room">Change Room</string>
    <string name="vip_meeting_room">Vip Meeting Room</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name ...</string>
    <string name="enter_email">Enter Email ...</string>
    <string name="email">Email</string>
    <string name="enter_job">Enter Job ...</string>
    <string name="job">Job</string>
    <string name="my_meetings">My Meetings</string>
    <string name="invitations">Invitations</string>
    <string name="add">Add</string>
    <string name="choose">Choose</string>
    <string name="select_date">Select Date</string>
    <string name="added">Added</string>
    <string name="guests">Guests</string>
    <string name="cancel_meeting">Cancel Meeting</string>
    <string name="canceled">Canceled</string>
    <string name="book_meeting">Book Meeting</string>
    <string name="close">Close</string>


    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="week">
        <item>0</item>
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string-array name="floor_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>