<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/surveySystemFragment"
        android:icon="@drawable/ic_layer"
        android:title="@string/survey_system"/>


    <item
        android:id="@+id/eventSystemFragment"
        android:icon="@drawable/ic_people"
        android:title="@string/event_system" />


    <item
        android:id="@+id/ticketSystemFragment"
        android:icon="@drawable/ic_document_normal"
        android:title="@string/ticket_system" />


    <item
        android:id="@+id/permissionFragment"
        android:icon="@drawable/ic_permission"
        android:title="@string/leave_request" />

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_stickynote"
        android:visible="false"
        android:title="@string/calendar" />

</menu>