<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="cart.LocationOrderFragment">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:text="@string/my_office"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:buttonTint="#3360DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myOffice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="5dp"
        android:textColor="#3D3D3D"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/select_location"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:buttonTint="#3360DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/radioButton2"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:hint="@string/select_location"
            android:paddingEnd="5dp"
            android:background="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="95dp"
        android:text="@string/other"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:buttonTint="#3360DD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/radioButton3"
        app:layout_constraintTop_toBottomOf="@+id/radioButton3">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="Floor"
            android:paddingStart="15dp"
            android:paddingEnd="5dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:background="@color/white"
        android:hint="@string/type_address"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textinput2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textinput2"
        app:layout_constraintTop_toTopOf="@+id/textinput2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:background="#3360DD"
        android:text="@string/checkout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/prg"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:visibility="gone"
        app:cardCornerRadius="36dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.agrawalsuneet.dotsloader.loaders.LazyLoader
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:lazyloader_animDur="800"
            app:lazyloader_dotsDist="5dp"
            app:lazyloader_dotsRadius="5dp"
            app:lazyloader_firstDelayDur="150"
            app:lazyloader_firstDotColor="#3360DD"
            app:lazyloader_interpolator="@android:anim/decelerate_interpolator"
            app:lazyloader_secondDelayDur="300"
            app:lazyloader_secondDotColor="#3360DD"
            app:lazyloader_thirdDotColor="#3360DD" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>