<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ticket"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/chat_details_back">


    <TextView
        android:id="@+id/title0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:gravity="start"
        android:textColor="#9F9F9F"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:gravity="start"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title0" />

    <TextView
        android:id="@+id/subtitle0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/ticket_id"
        android:gravity="start"
        android:textColor="#9F9F9F"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="3dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:gravity="start"
        app:layout_constraintEnd_toStartOf="@+id/view8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle0" />


    <View
        android:id="@+id/view8"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="25dp"
        android:background="#2B6B6B6B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/subtitle0" />

    <TextView
        android:id="@+id/category0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/category"
        android:textColor="#9F9F9F"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/subtitle0"
        app:layout_constraintEnd_toStartOf="@+id/view7"
        app:layout_constraintStart_toEndOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/subtitle0" />

    <TextView
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:gravity="start"
        android:maxLines="2"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/category0"
        app:layout_constraintTop_toBottomOf="@+id/category0" />

    <View
        android:id="@+id/view7"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="25dp"
        android:background="#2B6B6B6B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/priority0" />

    <TextView
        android:id="@+id/status"
        android:layout_width="70dp"
        android:layout_height="22dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="#FF6464"
        android:gravity="center"
        android:text="Closed"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priority0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textColor="#9F9F9F"
        android:textSize="14sp"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="@+id/category0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/category0" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:textColor="@color/black"
        android:textSize="16sp"

        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/priority0"
        app:layout_constraintTop_toBottomOf="@+id/priority0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>